feat: change title text (feature branch)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <h1 id="title">hello from conflict branch</h1>
     <h1>Dark Mode Toggle</h1>
     <button id="toggle-btn" onclick="toggleTheme()">Switch to Dark Mode</button>
 
